--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
-          # github_token:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./book
           publish_branch: gh-pages
 
